# bachelor-sem-project

./: Midterm Presentation Planning.md  Project_Report_1.md  Project_Report_1_Feedback.md  Project_Report_2.md  Project_Report_2_Feedback.md  Project_Report_3_Feedback.md  Project_Report_4_Feedback.md  Project_Report_5.md  Project_Report_5_Feedback.md  Project_Report_6_Feedback.md  Project_Report_7_Feedback.md  Project_Report_8_Feedback.md  Project_Report_9_Feedback.md  README.md
AverageFace report4/: average_face.ipynb  facesbarak-obama.jpgG.txt  facesbill-clinton.jpgG.txt  facesface1.jpgG.txt  facesgeorge-h-bush.jpgG.txt
AverageFace report4/.ipynb_checkpoints/: average_face-checkpoint.ipynb
AverageFace report4/faces/: barak-obama.jpgG.txt  bill-clinton.jpgG.txt  face2.jpgG.txt  face3.jpgG.txt  (+4 more)
AverageFace report4/scripts/: CMakeCache.txt  CMakeLists.txt  Makefile  caricaturizer.ipynb  cmake_install.cmake  dlib_landmarks_to_txt.py  face_landmark_detection_to_txt.cpp  face_statistics.py  face_statistics_notebook.ipynb  includeLibraries.h  opencv_example_project.cbp  scripts.cbp
AverageFace report4/scripts/.ipynb_checkpoints/: averageFace-checkpoint.py  caricaturizer-checkpoint.ipynb  face_landmark_detection_to_txt-checkpoint.cpp  face_landmarks-checkpoint.ipynb  face_statistics_notebook-checkpoint.ipynb  render_face-checkpoint.hpp  visualizing_dlib_68landmarks-checkpoint.ipynb
Code I used (picked apart)/: averageFace.py  caricaturizer.ipynb  dlib_landmarks_to_txt.py  face_landmarks.ipynb  face_statistics_notebook.ipynb  visualizing_dlib_68landmarks.ipynb  visualizing_dlib_faces.py
Joe's Report and shit/: bibliography.bib  main.tex  mock.py
(+10 files in other folders)
